Align correctly the items

--- a/src/Components/TodoList.scss
+++ b/src/Components/TodoList.scss
@@ -22,7 +22,7 @@
       max-width: 500px;
       display: flex;
       flex-direction: row;
-      align-items: left;
+      align-items: center;
       justify-content: center;
     }
 
